--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,24 +1,26 @@
 name: flutter_map_geojson
-description: This package parses GeoJson formatted spatial data and creates arrays of Flutter Map objects using default or custom defined create functions.  
+description: This package parses GeoJson formatted spatial data and creates
+    arrays of Flutter Map objects using default or custom defined create
+    functions.
 repository: https://github.com/jozes/flutter_map_geojson
 issue_tracker: https://github.com/jozes/flutter_map_geojson/issues
 version: 1.0.8
 homepage: https://github.com/jozes/flutter_map_geojson
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
-  flutter: ">=3.13.0"
+    sdk: ">=3.0.0 <4.0.0"
+    flutter: ">=3.13.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-  latlong2: ^0.9.0
-  flutter_map: ">=6.0.0 <8.0.0"
+    flutter:
+        sdk: flutter
+    flutter_map: ^8.1.0
+    latlong2: ^0.9.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^3.0.0
+    flutter_lints: ^3.0.0
+    flutter_test:
+        sdk: flutter
 
 # The following section is specific to Flutter packages.
-flutter:
+flutter: null
